--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,6 +8,7 @@
 .advantages__item {
   background: @color-grey;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .advantages__subtitle {
@@ -20,6 +21,45 @@
   padding: 30px 0;
 }
 
+.advantages__svg-tablet,
+.advantages__svg-desktop {
+  display: none;
+}
+
+.advantages__svg-mobile {
+  position: absolute;
+  left: 7px;
+}
+
+.advantages__svg-mobile--mod {
+  left: -8px;
+}
+
+.advantages__green-circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: @color-green;
+}
+
+.advantages__svg-mod {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 206px;
+  margin-left: 22px;
+  justify-content: space-between;
+}
+
+.advantages__svg {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 180px;
+  margin-left: 22px;
+  justify-content: space-between;
+}
+
 .advantages__description {
   position: relative;
   display: inline-block;
@@ -30,7 +70,7 @@
   width: 243px;
   padding: 0;
   text-align: left;
-  margin-bottom: 38px;
+  margin-bottom: 40px;
 }
 
 .advantages__description::after {
@@ -54,42 +94,93 @@
   display: flex;
   flex-wrap: wrap;
   margin-left: 19px;
-  padding-bottom: 18px;
 }
 
-.advantages__link::after {
-  content: url("../img/arrow.svg");
-  padding-left: 15px;
+.advantages__link-svg {
+  display: flex;
+  align-items: center;
+  padding-bottom: 25px;
+}
+
+.advantages__link > svg:hover {
+  overflow: visible;
+  transition: width 0.5s ease;
+  width: 40px;
+}
+
+.advantages__link-svg:active {
+  opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
   .advantages__item {
-    margin-bottom: 30px;
+    position: relative;
+    margin-bottom: 27px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px 52px;
+    padding: 79px 54px 33px;
   }
 
   .advantages__subtitle {
     font-size: 36px;
     line-height: 36px;
+    padding: 0 0 24px;
   }
 
   .advantages__link {
     font-size: 20px;
     line-height: 30px;
     margin-left: 0;
+    margin-right: 27px;
+    padding-bottom: 0;
+  }
+
+  .advantages__link::after {
+    padding-left: 25px;
+    position: relative;
+    top: -3px;
   }
 
   .advantages__description {
     font-size: 16px;
     line-height: 24px;
-    width: 300px;
+    width: 340px;
+    margin-bottom: 50px;
   }
 
   .advantages__description::after {
     display: none;
+  }
+
+  .advantages__svg-mobile {
+    display: none;
+  }
+
+  .advantages__green-circle {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    right: 61px;
+    bottom: 81px;
+  }
+
+  .advantages__svg-tablet {
+    display: block;
+    position: absolute;
+    right: 91px;
+    bottom: 99px;
+  }
+
+  .advantages__svg-tablet--mod {
+    right: 28px;
+    bottom: 127px;
+  }
+
+  .advantages__svg,
+  .advantages__svg-mod {
+    margin-left: 0;
+    position: initial;
   }
 }
 
@@ -103,16 +194,56 @@
 
   .advantages__description {
     width: 470px;
+    margin-bottom: 25px;
   }
 
   .advantages__item {
-    margin-bottom: 72px;
+    margin-bottom: 73px;
     display: inline;
-    padding: 35px 52px;
+    padding: 46px 45px 0 53px;
   }
 
+  // .advantages__link {
+  //   padding-bottom: 56px;
+  // }
+
   .advantages__subtitle {
-    padding-top: 20px;
-    padding-bottom: 73px;
+    padding: 0;
+  }
+
+  .advantages__svg-tablet {
+    display: none;
+  }
+
+  .advantages__svg-desktop {
+    display: block;
+    position: absolute;
+    left: 67px;
+    top: 40px;
+  }
+
+  .advantages__link-svg {
+    padding-bottom: 54px;
+  }
+
+  .advantages__svg-desktop--mod {
+    left: 34px;
+    top: 67px;
+  }
+
+  .advantages__green-circle {
+    width: 100px;
+    height: 100px;
+    position: inherit;
+  }
+
+  .advantages__svg-mod {
+    width: 368px;
+    padding-bottom: 42px;
+  }
+
+  .advantages__svg {
+    width: 324px;
+    padding-bottom: 42px;
   }
 }
