--- a/source/less/global/common.less
+++ b/source/less/global/common.less
@@ -9,6 +9,8 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   width: 320px;
   margin: 0 auto;
   min-height: 100%;
@@ -21,6 +23,7 @@ body {
   align-items: center;
 }
 
+
 @media (min-width: @tablet-width) {
   body {
     width: 768px;
@@ -31,4 +34,39 @@ body {
   body {
     width: 1440px;
   }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.button {
+  font-family: "Oswald", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: @color-white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: @color-green;
+}
+
+.button:hover {
+  background: @color-green-hover;
+}
+
+.button:active {
+  color: rgba(256, 256, 256, 0.3);
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
