--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,7 +10,7 @@
 @import "./blocks/advantages.less";
 @import "./blocks/example.less";
 @import "./blocks/program.less";
-@import "./blocks/main-footer.less";
+@import "./blocks/footer.less";
 @import "./blocks/visually-hidden.less";
 @import "./blocks/location.less";
 // catalog
