--- a/source/less/blocks/additionally.less
+++ b/source/less/blocks/additionally.less
@@ -12,10 +12,15 @@
 }
 
 .additionally__line {
+  width: 320px;
+  margin: 0 auto;
+}
+
+.additionally__position {
   position: relative;
 }
 
-.additionally__line::before {
+.additionally__position::before {
   content: "";
   position: absolute;
   top: 46%;
@@ -29,7 +34,8 @@
 }
 
 .additionally__wrapper {
-  padding: 0 20px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .additionally__list {
@@ -157,7 +163,7 @@
 
   .additionally__button::after {
     left: -38px;
-    width: 112%;
+    right: -38px;
     top: 138px;
   }
 
@@ -220,11 +226,15 @@
   }
 
   .additionally__wrapper {
-    padding: 0 30px;
+    width: 708px;
   }
 
   .additionally__button {
     margin-bottom: 25px;
+  }
+
+  .additionally__line {
+    width: 765px;
   }
 }
 
@@ -240,7 +250,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 0 110px;
+    width: 1220px;
   }
 
   .additionally__inner {
@@ -289,6 +299,10 @@
   .additionally__title {
     margin-left: 70px;
     padding: 76px 40px 81px 35px;
+  }
+
+  .additionally__line {
+    width: 1440px;
   }
 
   .additionally__line-title {
