--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,3 +1,8 @@
+.advantages__wrapper {
+  width: 280px;
+  margin: 0 auto;
+}
+
 .advantages__list {
   list-style: none;
   margin: 0 auto;
@@ -113,6 +118,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .advantages__wrapper {
+    width: 708px;
+  }
+
   .advantages__item {
     position: relative;
     margin-bottom: 27px;
@@ -185,6 +194,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .advantages__wrapper {
+    width: 1220px;
+  }
+
   .advantages__list {
     display: grid;
     grid-template-columns: 570px 570px;
@@ -202,10 +215,6 @@
     display: inline;
     padding: 46px 45px 0 53px;
   }
-
-  // .advantages__link {
-  //   padding-bottom: 56px;
-  // }
 
   .advantages__subtitle {
     padding: 0;
