--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -5,15 +5,16 @@
   background-color: @color-white;
   padding: 0 20px;
   position: relative;
-  min-width: 320px;
+  width: 320px;
+  margin: 0 auto;
 }
 
 .header::after {
   position: absolute;
   outline: 1px solid @color-background;
   content: "";
-  right: 0;
-  left: 0;
+  right: -244px;
+  left: -244px;
   bottom: 0;
 }
 
