--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -10,8 +10,14 @@
   display: inline-block;
 }
 
+.form__cotainer {
+  width: 280px;
+  margin: 0 auto;
+}
+
 .form__wrapper {
-  padding: 0 20px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .form__title--mod {
@@ -86,13 +92,26 @@
 
 .form__list {
   list-style: none;
-  margin: 0;
+  width: 280px;
+  margin: 0 auto;
   padding: 0;
 }
 
-.form__list--radio {
+.form__radio-wrapper {
   border: 1px solid @color-light-grey;
-  padding: 20px 0 0 20px;
+  border-left: none;
+  border-right: none;
+}
+
+.form__line-container {
+  width: 320px;
+  margin: 0 auto;
+}
+
+.form__list--radio {
+  width: 280px;
+  margin: 0 auto;
+  padding: 28px 0 0;
 }
 
 .form__radio {
@@ -247,11 +266,11 @@
 .form__item {
   display: flex;
   align-items: center;
-  margin: 0 20px 14px;
+  margin: 0 0 14px;
 }
 
 .form__item:nth-last-child(1) {
-  margin-bottom: 27px;
+  margin-bottom: 19px;
 }
 
 .form__item-mobile {
@@ -285,6 +304,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .form__attention {
@@ -315,9 +336,22 @@
   border: 1px solid @color-grey-hover;
 }
 
+.form__wrapper-textarea {
+  width: 280px;
+  margin: 0 auto;
+}
+
 @media (min-width: @tablet-width) {
   .form__wrapper {
-    padding: 0 70px;
+    width: 630px;
+  }
+
+  .form__cotainer {
+    width: 708px;
+  }
+
+  .form__list {
+    width: 630px;
   }
 
   .form__title {
@@ -386,8 +420,14 @@
     margin-bottom: 72px;
   }
 
+  .form__radio-wrapper {
+    width: 630px;
+    margin: 0 auto;
+    border: 1px solid #e7e7e7;
+  }
+
   .form__list--radio {
-    padding: 31px 0 0 28px;
+    padding: 29px 32px 8px;
   }
 
   .form__list--radio::after {
@@ -463,7 +503,10 @@
     grid-template-columns: 283px 180px;
     align-items: center;
     gap: 61px;
-    margin: 14px 0 72px;
+    margin: 0 auto;
+    width: 627px;
+    margin-top: 14px;
+    margin-bottom: 72px;
   }
 
   .form__button-submit {
@@ -477,10 +520,14 @@
     font-size: 16px;
   }
 
+  .form__wrapper-textarea {
+    width: 631px;
+  }
+
   .form__title-contact {
     font-size: 36px;
     line-height: 36px;
-    padding: 78px 42px 76px 39px;
+    padding: 74px 42px 76px 39px;
   }
 
   .form__line-title {
@@ -491,11 +538,25 @@
   .form__line::before {
     top: 53%;
   }
+
+  .form__line-container {
+    width: 768px;
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .form__title--mod {
-    padding: 78px 0 54px;
+    padding: 74px 0 54px;
+  }
+
+  .form__list,
+  .form__radio-wrapper {
+    width: 568px;
+  }
+
+  .form__cotainer {
+    width: auto;
   }
 
   .form__title-contact {
@@ -503,14 +564,16 @@
   }
 
   .form__wrapper {
-    padding: 0 110px;
+    width: 1220px;
+    margin: 0 auto;
   }
 
   .form__inner {
     display: grid;
     grid-template-columns: 569px 569px;
     gap: 80px;
-    margin: 0 110px;
+    width: 1220px;
+    margin: 0 auto;
   }
 
   .form__item:nth-last-child(1) {
@@ -521,10 +584,15 @@
     margin-bottom: 0;
   }
 
+  .form__line-container {
+    width: 1440px;
+  }
+
   .form__list--additionally {
     display: grid;
     grid-template-columns: 221px 221px 221px 149px;
     gap: 104px;
+    width: 1220px;
   }
 
   .form__list--email {
@@ -532,12 +600,16 @@
     grid-template-columns: 566px 574px;
     gap: 80px;
     margin-bottom: 69px;
+    width: 1220px;
   }
 
   .form__button {
     grid-template-columns: 568px 185px;
     gap: 80px;
-    margin: 14px 0 82px;
+    width: 1220px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 84px;
   }
 
   .form__item-mobile,
@@ -551,5 +623,9 @@
 
   .form__item-svg {
     right: 16px;
+  }
+
+  .form__wrapper-textarea {
+    width: 1220px;
   }
 }
