--- a/source/less/blocks/nutrition.less
+++ b/source/less/blocks/nutrition.less
@@ -1,5 +1,6 @@
 .nutrition__wrapper {
-  margin-bottom: 20px;
+  width: 320px;
+  margin: 0 auto 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,6 +71,7 @@
     padding: 0;
     margin-bottom: 0;
     background-image: none;
+    width: 770px;
   }
 
   .nutrition__inner {
@@ -140,30 +142,39 @@
   }
 
   .nutrition__link {
-    margin-left: 190px;
+    margin-left: 80px;
   }
 
   .nutrition__img {
     position: absolute;
     width: 552px;
-    right: 329px;
+    right: 220px;
     top: 31px;
   }
 
   .nutrition__wrapper {
     margin-bottom: 352px;
+    width: 1220px;
+  }
+
+  .nutrition__background-image {
+    background-image: url("../img/bg-cat-desktop.jpg");
+    width: 1044px;
+    height: 696px;
+    position: absolute;
+    left: 610px;
+    bottom: -268px;
+    background-color: @color-green;
+  }
+
+  @media (min-resolution: 2dppx) {
+    .additionally__info {
+      background-image: url("../img/bg-cat-desktop@2x.jpg");
+      background-size: 706px;
+    }
   }
 
   .nutrition__inner {
-    margin-left: 190px;
-  }
-
-  .nutrition__cat-img {
-    display: inline;
-    width: 720px;
-    min-height: 696px;
-    left: 721px;
-    top: -115px;
-    background-color: @color-green;
+    margin-left: 80px;
   }
 }
