--- a/source/less/global/common.less
+++ b/source/less/global/common.less
@@ -9,31 +9,14 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  width: 320px;
   margin: 0 auto;
   min-height: 100%;
   font-family: "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  color: #000000;
-  background-color: hsl(0, 0%, 85%);
+  color: @color-black;
   align-items: center;
-}
-
-
-@media (min-width: @tablet-width) {
-  body {
-    width: 768px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  body {
-    width: 1440px;
-  }
 }
 
 img {
